crates/servicepoint_binding_uniffi/libraries/go/servicepoint_binding_uniffi/servicepoint_binding_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	int32_t capacity;
	int32_t len;
	uint8_t *data;
} RustBuffer;
typedef struct ForeignBytes {
	int32_t len;
	const uint8_t *data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
RustBuffer ffi_servicepoint_binding_uniffi_rustbuffer_alloc(
	int32_t size,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rustbuffer_free(
	RustBuffer buf,
	RustCallStatus* out_status
);